package com.habithatch.demo.entities

data class Pet(val name: String, val imageRes: Int)