@startuml


package Model{
    class Image{
        url: String
    }

    class Animation{
        frames: List<Image>
        duration: Int
    }

    class User {
        - pet: Pet
    }


    class Pet {
        + name: String
        + animation: Animation?
        + image: Image
    }

    enum Priority {
        NORMAL
        HIGH
    }

    class Habit {
        + name: String
        + priority: Priority
        + isDone: Boolean
    }

    Habit *- Priority
    User *-- Pet
    User *.. Habit: "indirectly"
    Pet o-- Image
    Pet o-- Animation
    Animation o-- Image
}

package View{
    class InitialLoginView{
    }

    class HomeView {
    }

    class SettingsView{
    }
}

package ViewModel{
    class SignupViewModel{
        login()
        user: User
        pets: List<Pet>
    }
    class HomeViewModel {
        addHabit()
        markHabitDone()
        user: User
    }
    class SettingsViewModel{
        userSettings: UserSettings
        saveSettings()
    }
}

package Repository{
    class UserRepository {
        getUser()
        saveUser()
    }

    class HabitRepository {
        getHabits()
        saveHabit()
        updateHabit()
    }
}
package DAO{
    class UserDAO


    class HabitDAO
}

class AppConfig{
    pets: List<Pet>
}

AppConfig o-- Pet
InitialLoginView .down.> InitialLoginViewModel
HomeView .down.> HomeViewModel
SettingsView .down.> SettingsViewModel

InitialLoginViewModel .down..> UserRepository

HomeViewModel .down> HabitRepository
HomeViewModel .down> UserRepository

SettingsViewModel .down.> UserRepository


UserRepository ..down> UserDAO
HabitRepository ..down> HabitDAO


UserDAO -down-> User
HabitDAO -down-> Habit
@enduml
